Opened 15 years ago

Closed 15 years ago

#6243 closed bug (fixed)

Problems with IP addressing that can be trigerred by using ifconfig

Reported by: atis.elsts Owned by: axeld
Priority: normal Milestone: R1
Component: Network & Internet/Stack Version: R1/alpha2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Problem 1: losing connectivity due to incorrect routing table
To repeat:

  • create interface alias with same IP address as some existing interface
  • delete the alias interface or change its address
  • now the old IP address cannot be pinged anymore, because the connected route has been deleted.

Problem 2: kernel panic due to incorrect routing table
To repeat:

  • create interface alias with an IP address that has the same network part as some already existing address
  • delete the interface alias
  • try to ping the address that belonged to the removed alias
  • kernel panic happens. The callstack shows find_route() function as the culprit.

Haiku version is R1/alpha2. I'm using the anyboot image with QEMU.

Change History (2)

comment:1 by axeld, 15 years ago

Owner: changed from zooey to axeld
Status: newin-progress

comment:2 by axeld, 15 years ago

Component: Network & Internet/IPv4Network & Internet/Stack
Resolution: fixed
Status: in-progressclosed

Problem 1 fixed in hrev37691, problem 2 in hrev37692.

Note: See TracTickets for help on using tickets.