* Make sure the interface matches to the route if given. This fixes problem 1 of   bug #6243.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37691 a95241bf-73f2-0310-859d-f6bbb57e9c96